<resources>
    <string name="app_name">SmartYDays</string>
    <string name="title_activity_main">SmartYDays</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_startups">Startups</string>
    <string name="menu_guidances">Notes de cadrage</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_customer">Commanditaire</string>
    <string name="menu_my_guidances">Mes notes de cadrage</string>
    <string name="menu_my_startups">Mes startups</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="item4">Item 4</string>
    <string name="item5">Item 5</string>
    <string name="title_activity_new_contact">Nouveau contact</string>
    <string name="contactMenuItem">Mon équipe</string>
    <string name="todo_list">Todo</string>
    <string name="titre">Titre</string>
    <string name="add">Add</string>
    <string name="task">Task</string>
    <string name="ok">OK</string>
    <string name="title_edit_contact_activity">Modifier contact</string>
    <string name="rechercher_un_contact">Rechercher un contact</string>
    <string name="add_contact_button">Add contact button</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="adresse_postale">Adresse postale</string>
    <string name="ajouter">Ajouter</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="access_token">
        pk.eyJ1IjoidGhvbWFzYW5nZWxpbmkiLCJhIjoiY2p3anBmcW1sMG02cTQwbjYyOG5mbnN6eCJ9.Sd6HjWyahzr_1ennL_k_0A
    </string>


</resources>
