<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/item1"
                android:icon="@drawable/ic_menu_dashboard"
                android:title="@string/item1"/>
        <item
                android:id="@+id/item2"
                android:icon="@drawable/ic_menu_chevron_right"
                android:title="@string/item2"/>
        <item
                android:id="@+id/item3"
                android:icon="@drawable/ic_menu_chevron_right"
                android:title="@string/item3"/>
        <item
                android:id="@+id/item4"
                android:icon="@drawable/ic_menu_chevron_right"
                android:title="@string/item4"/>
        <item
                android:id="@+id/item5"
                android:icon="@drawable/ic_menu_chevron_right"
                android:title="@string/item5"/>
    </group>


</menu>
