<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".activity.NewContactActivity">


    <TextView
            android:id="@+id/newContactFirstnameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pr_nom"
            android:labelFor="@+id/newContactFirstname"
    />
    <EditText
            android:layout_below="@+id/newContactFirstnameLabel"
            android:id="@+id/newContactFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:importantForAutofill="no" tools:targetApi="o"
    />
    <TextView
            android:layout_below="@id/newContactFirstname"
            android:id="@+id/newContactLastnameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:labelFor="@id/newContactLastname"
    />
    <EditText
            android:layout_below="@id/newContactLastnameLabel"
            android:id="@+id/newContactLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:importantForAutofill="no" tools:targetApi="o"
    />
    <TextView
            android:layout_below="@id/newContactLastname"
            android:id="@+id/newContactEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adresse_mail"
            android:labelFor="@+id/newContactEmail"
    />
    <EditText
            android:layout_below="@id/newContactEmailLabel"
            android:id="@+id/newContactEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:importantForAutofill="no" tools:targetApi="o"
    />
    <TextView
            android:layout_below="@id/newContactEmail"
            android:id="@+id/newContactAddressLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adresse_postale"
            android:labelFor="@id/newContactAddress"
    />
    <EditText
            android:layout_below="@+id/newContactAddressLabel"
            android:id="@+id/newContactAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:importantForAutofill="no" tools:targetApi="o"
    />

    <Button
            android:layout_below="@+id/newContactAddress"
            android:id="@+id/btnAddNewContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajouter"
    />

</RelativeLayout>